disabled属性でボタンの有効、無効の切り替えと、stopボタンを作りました。

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <!-- ここに記述していきましょう！ -->
         <div id="display">00:00:00:0</div>
         <div class="buttons">
-          <button id="startStop">START</button>
-          <button id="reset">RESET</button>
+          <button id="start">START</button>
+          <button id="stop" disabled>STOP</button>
+          <button id="reset" disabled>RESET</button>
         </div>
         <script src="main.js"></script>
       </body>
